--- a/MapViewAddressList/Base.lproj/Main.storyboard
+++ b/MapViewAddressList/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--АДРЕСА-->
@@ -23,11 +22,11 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="KuH-KZ-3a9">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </mapView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VuG-kZ-Kif">
-                                <rect key="frame" x="20" y="83" width="560" height="175"/>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VuG-kZ-Kif">
+                                <rect key="frame" x="15" y="74" width="570" height="175"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wBJ-01-pku">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="175"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="570" height="175"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V0Z-tc-aB8">
                                             <size key="itemSize" width="527" height="46"/>
@@ -37,7 +36,7 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FullCollectionViewCell" id="Pnd-9C-NAn" customClass="FullCollectionViewCell" customModule="MapViewAddressList" customModuleProvider="target">
-                                                <rect key="frame" x="16.5" y="0.0" width="527" height="46"/>
+                                                <rect key="frame" x="22" y="0.0" width="527" height="46"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="527" height="46"/>
@@ -46,6 +45,9 @@
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jKH-xT-w1c">
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="46"/>
                                                             <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="50" id="xkT-F3-bRf"/>
+                                                            </constraints>
                                                             <state key="normal" title="А"/>
                                                             <connections>
                                                                 <action selector="addressFieldMakeActive:" destination="BYZ-38-t0r" eventType="touchUpInside" id="10K-2q-7Ft"/>
@@ -81,18 +83,17 @@
                                                 </view>
                                                 <constraints>
                                                     <constraint firstItem="3Su-bI-275" firstAttribute="leading" secondItem="2yf-x5-8Ft" secondAttribute="trailing" constant="-2" id="2HC-qd-kal"/>
-                                                    <constraint firstItem="2yf-x5-8Ft" firstAttribute="top" secondItem="Pnd-9C-NAn" secondAttribute="top" id="2f3-Ru-nc4"/>
                                                     <constraint firstItem="3Su-bI-275" firstAttribute="leading" secondItem="2yf-x5-8Ft" secondAttribute="trailing" constant="-2" id="3eC-4N-lfG"/>
-                                                    <constraint firstItem="2yf-x5-8Ft" firstAttribute="centerX" secondItem="Pnd-9C-NAn" secondAttribute="centerX" constant="3" id="4LQ-7U-fFM"/>
+                                                    <constraint firstAttribute="bottom" secondItem="jKH-xT-w1c" secondAttribute="bottom" id="CWl-0l-TKJ"/>
                                                     <constraint firstItem="3Su-bI-275" firstAttribute="baseline" secondItem="jKH-xT-w1c" secondAttribute="firstBaseline" id="DIa-f2-xBR"/>
-                                                    <constraint firstAttribute="trailing" secondItem="3Su-bI-275" secondAttribute="trailing" id="IWz-1A-lXq"/>
                                                     <constraint firstItem="2yf-x5-8Ft" firstAttribute="top" secondItem="3Su-bI-275" secondAttribute="top" id="Irc-1d-dtg"/>
-                                                    <constraint firstItem="jKH-xT-w1c" firstAttribute="top" secondItem="Pnd-9C-NAn" secondAttribute="top" id="Nmd-Ka-BC1"/>
-                                                    <constraint firstAttribute="bottom" secondItem="2yf-x5-8Ft" secondAttribute="bottom" id="fN1-6N-xqo"/>
+                                                    <constraint firstItem="jKH-xT-w1c" firstAttribute="top" secondItem="Pnd-9C-NAn" secondAttribute="top" id="W2f-xy-8tU"/>
+                                                    <constraint firstItem="jKH-xT-w1c" firstAttribute="leading" secondItem="Pnd-9C-NAn" secondAttribute="leading" id="eZ9-kS-5bB"/>
+                                                    <constraint firstItem="2yf-x5-8Ft" firstAttribute="bottom" secondItem="3Su-bI-275" secondAttribute="bottom" id="jDg-ld-6WL"/>
                                                     <constraint firstItem="2yf-x5-8Ft" firstAttribute="leading" secondItem="jKH-xT-w1c" secondAttribute="trailing" id="n5d-QT-hEN"/>
                                                     <constraint firstItem="3Su-bI-275" firstAttribute="firstBaseline" secondItem="jKH-xT-w1c" secondAttribute="baseline" id="oGI-ZU-Kbq"/>
-                                                    <constraint firstAttribute="bottom" secondItem="jKH-xT-w1c" secondAttribute="bottom" id="oQV-Et-qDa"/>
-                                                    <constraint firstItem="jKH-xT-w1c" firstAttribute="leading" secondItem="Pnd-9C-NAn" secondAttribute="leading" id="vmO-Og-PkF"/>
+                                                    <constraint firstItem="jKH-xT-w1c" firstAttribute="top" secondItem="2yf-x5-8Ft" secondAttribute="top" id="wTa-W7-1Hk"/>
+                                                    <constraint firstAttribute="trailing" secondItem="3Su-bI-275" secondAttribute="trailing" id="y5D-gp-OsI"/>
                                                 </constraints>
                                                 <connections>
                                                     <outlet property="addressTextLabel" destination="2yf-x5-8Ft" id="QaJ-cR-Hl0"/>
@@ -101,13 +102,13 @@
                                                 </connections>
                                             </collectionViewCell>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EmptyCollectionViewCell" id="74k-dD-zc6" customClass="EmptyCollectionViewCell" customModule="MapViewAddressList" customModuleProvider="target">
-                                                <rect key="frame" x="16.5" y="56" width="527" height="46"/>
+                                                <rect key="frame" x="22" y="56" width="527" height="46"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="527" height="46"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <button opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="slA-or-djD">
+                                                        <button opaque="NO" tag="1001" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="slA-or-djD">
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="46"/>
                                                             <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
@@ -122,11 +123,6 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="slA-or-djD" secondAttribute="bottom" id="7VO-o8-NyJ"/>
-                                                    <constraint firstItem="slA-or-djD" firstAttribute="leading" secondItem="74k-dD-zc6" secondAttribute="leading" id="8pt-n8-fIV"/>
-                                                    <constraint firstItem="slA-or-djD" firstAttribute="top" secondItem="74k-dD-zc6" secondAttribute="top" id="uaG-zl-3BY"/>
-                                                </constraints>
                                                 <connections>
                                                     <outlet property="letterControl" destination="slA-or-djD" id="Kme-Wn-rkU"/>
                                                 </connections>
@@ -141,6 +137,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="wBJ-01-pku" secondAttribute="bottom" id="5N9-Nr-FE2"/>
+                                    <constraint firstAttribute="height" constant="175" id="LM2-2h-OH4"/>
                                     <constraint firstItem="wBJ-01-pku" firstAttribute="leading" secondItem="VuG-kZ-Kif" secondAttribute="leading" id="Pbh-Tu-g8P"/>
                                     <constraint firstAttribute="trailing" secondItem="wBJ-01-pku" secondAttribute="trailing" id="TTd-f0-rya"/>
                                     <constraint firstItem="wBJ-01-pku" firstAttribute="top" secondItem="VuG-kZ-Kif" secondAttribute="top" id="Vuf-GD-IUI"/>
@@ -151,13 +148,21 @@
                         <constraints>
                             <constraint firstItem="KuH-KZ-3a9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="33d-Qa-9bm"/>
                             <constraint firstItem="KuH-KZ-3a9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jzb-PN-X1a"/>
-                            <constraint firstItem="VuG-kZ-Kif" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="19" id="LJb-NG-v16"/>
-                            <constraint firstItem="VuG-kZ-Kif" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QvW-uO-IKz"/>
+                            <constraint firstItem="VuG-kZ-Kif" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="LJb-NG-v16"/>
+                            <constraint firstItem="VuG-kZ-Kif" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="19" id="MAb-bB-8k9"/>
                             <constraint firstItem="KuH-KZ-3a9" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="acV-1m-ngJ"/>
                             <constraint firstItem="VuG-kZ-Kif" firstAttribute="centerX" secondItem="KuH-KZ-3a9" secondAttribute="centerX" id="fFs-Pz-6dl"/>
+                            <constraint firstItem="VuG-kZ-Kif" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="gax-ch-gjW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VuG-kZ-Kif" secondAttribute="bottom" constant="342" id="l06-6n-YFg"/>
                             <constraint firstAttribute="trailing" secondItem="KuH-KZ-3a9" secondAttribute="trailing" id="l2J-U2-qWD"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VuG-kZ-Kif" secondAttribute="bottom" constant="342" id="l5H-lX-dwC"/>
+                            <constraint firstAttribute="trailing" secondItem="VuG-kZ-Kif" secondAttribute="trailing" constant="15" id="tzF-HA-Cch"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="MAb-bB-8k9"/>
+                                <exclude reference="l06-6n-YFg"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="АДРЕСА" id="BNo-e4-Iq0"/>
                     <connections>
