--- a/MapViewAddressList/Base.lproj/Main.storyboard
+++ b/MapViewAddressList/Base.lproj/Main.storyboard
@@ -17,28 +17,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="KuH-KZ-3a9">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                            </mapView>
-                            <containerView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="Nha-f7-Fe5">
-                                <rect key="frame" x="20" y="74" width="560" height="276"/>
+                            <containerView opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="Nha-f7-Fe5">
+                                <rect key="frame" x="20" y="74" width="560" height="160"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="160" id="WP4-sM-6dj"/>
+                                </constraints>
                                 <connections>
-                                    <segue destination="gGp-cx-8kX" kind="embed" id="sJD-Un-Bmk"/>
+                                    <segue destination="gGp-cx-8kX" kind="embed" identifier="mapToAddressViewControllerSegue" id="sJD-Un-Bmk"/>
                                 </connections>
                             </containerView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="KuH-KZ-3a9">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="33d-Qa-9bm"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="lessThanOrEqual" secondItem="Nha-f7-Fe5" secondAttribute="bottom" constant="250" id="G3k-OJ-SMb"/>
-                            <constraint firstAttribute="trailing" secondItem="Nha-f7-Fe5" secondAttribute="trailing" constant="20" symbolic="YES" id="IcI-Gj-c4d"/>
-                            <constraint firstItem="Nha-f7-Fe5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="Ji2-vZ-JCy"/>
-                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jzb-PN-X1a"/>
-                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="acV-1m-ngJ"/>
-                            <constraint firstAttribute="trailing" secondItem="KuH-KZ-3a9" secondAttribute="trailing" id="l2J-U2-qWD"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nha-f7-Fe5" secondAttribute="bottom" priority="999" constant="300" id="o5K-QE-uoR"/>
-                            <constraint firstItem="Nha-f7-Fe5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="qIG-sq-a0Z"/>
+                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="3r5-7N-9Xy"/>
+                            <constraint firstItem="Nha-f7-Fe5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="95w-za-1q4"/>
+                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EZD-Yp-HRW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KuH-KZ-3a9" secondAttribute="bottom" id="Jhk-He-1gB"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nha-f7-Fe5" secondAttribute="bottom" constant="366" id="SYb-2k-S1J"/>
+                            <constraint firstAttribute="trailing" secondItem="KuH-KZ-3a9" secondAttribute="trailing" id="flx-IR-C5W"/>
+                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="mvh-aA-Lzb"/>
+                            <constraint firstItem="KuH-KZ-3a9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nhC-7i-7lw"/>
+                            <constraint firstItem="Nha-f7-Fe5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="v8u-a6-DPV"/>
+                            <constraint firstAttribute="trailing" secondItem="Nha-f7-Fe5" secondAttribute="trailing" constant="20" id="veN-qW-GEG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="АДРЕСА" id="BNo-e4-Iq0"/>
@@ -59,11 +63,11 @@
                         <viewControllerLayoutGuide type="bottom" id="sbG-Ih-n2Q"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vJV-A6-TWJ">
-                        <rect key="frame" x="0.0" y="0.0" width="560" height="276"/>
+                        <rect key="frame" x="0.0" y="0.0" width="560" height="160"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2yj-3Q-A5t">
-                                <rect key="frame" x="0.0" y="0.0" width="560" height="276"/>
+                                <rect key="frame" x="0.0" y="0.0" width="560" height="160"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="42z-AA-WbM">
                                     <size key="itemSize" width="500" height="50"/>
@@ -79,12 +83,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="500" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfI-y9-dSR">
+                                                <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfI-y9-dSR">
                                                     <rect key="frame" x="0.0" y="0.0" width="46" height="50"/>
                                                     <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" title="Button"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-LX-l3k">
+                                                <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-LX-l3k">
                                                     <rect key="frame" x="454" y="0.0" width="46" height="50"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" title="Button"/>
@@ -92,7 +96,7 @@
                                                         <action selector="deleteCellAtIndexPath:" destination="gGp-cx-8kX" eventType="touchUpInside" id="jcC-nr-961"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5r-Sr-qZI">
+                                                <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5r-Sr-qZI">
                                                     <rect key="frame" x="46" y="0.0" width="408" height="50"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <state key="normal" title="Button"/>
